--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"yourip.aternos.me",
-	"port": "25565",
-	"name": "afk_bot"
+	"ip":"Notetpjper.aternos.me",
+	"port": "23427",
+	"name": "bot"
 }
